<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rototone</string>
    <string name="no_multitones">There are no playlists</string>
    <string name="no_tones">There are no tones</string>
    <string name="menu_insert_multitone">Create Playlist</string>
    <string name="menu_delete_multitone">Delete Playlist</string>
    <string name="menu_insert_tone">Add Tone</string>
    <string name="menu_delete_tone">Remove Tone</string>
    <string name="menu_edit">Edit Playlist</string>
        <string name="menu_info">Info</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_move">Change Tone Order</string>
    <string name="menu_add_tone">Add Tones</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Done</string>
    <string name="button_exit">Exit</string>
    <string name="button_new">New</string>
    <string name="button_add">Add</string>
    <string name="select_tone">Select Tone</string>
    <string name="title_title_edit">Title</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_edit">Edit</string>
    <string name="menu_assign_to_contact">Set to Contact</string>
    <string name="menu_assign_to_contact_group">Set to Contact Group</string>
    <string name="menu_make_default">Set to Default</string>
    <string name="menu_remove_default">Remove from Default</string>
    <string name="menu_remove_from_contact">Remove from Contact</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_are_you_sure">Are you sure you want to delete the playlist?</string>
    
    <!-- 
    Media Select Activity
     -->

    <string name="search_edit_box">Search</string>
    <string name="menu_play">Play</string>
    <string name="menu_details">Details</string>

    <string name="button_start_record_activity">Record New</string>
    <string name="no_sdcard">No SD card detected, only showing internal media.</string>
    <string name="sdcard_shared">Sorry, can\'t show external media while your handset is mounted as a USB device.</string>
    
    <!--
     Success and error messages
     -->

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_title_warning">Warning</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="delete_tmp_error">Error deleting temporary file</string>
    <string name="record_error">Error launching Sound Recorder</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    
    <string name="select_failed">Error selecting a tone</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>

    
     
</resources>
